manifests/system/node-exporter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-exporter
  labels:
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: observability
