manifests/system/node-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: node-exporter
  labels:
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: observability
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
